[project]
name = "test-repo"
version = "0.1.0"
description = "Test repository for GitHub webhook server integration tests"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
